feat: fix summary being offscreen

--- a/options.html
+++ b/options.html
@@ -27,7 +27,7 @@
     <h2>Extension Settings</h2>
     <label>
       API Key:
-      <input type="text" id="apiKey" placeholder="Enter your API key here">
+      <input type="password" id="apiKey" placeholder="Enter your API key here">
     </label>
     <button id="save">Save</button>
 
