feat: added custom openwebui url

--- a/options.html
+++ b/options.html
@@ -12,7 +12,7 @@
         display: block;
         margin-bottom: 10px;
       }
-      input[type="text"] {
+      input {
         width: 100%;
         padding: 8px;
         margin-bottom: 20px;
@@ -28,6 +28,10 @@
     <label>
       API Key:
       <input type="password" id="apiKey" placeholder="Enter your API key here">
+    </label>
+    <label>
+      Open WebUI Domain:
+      <input type="text" id="openWebuiDomain" placeholder="e.g., https://localhost">
     </label>
     <button id="save">Save</button>
 
